--- a/index.html
+++ b/index.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario de Consulta</title>
-    <link rel="stylesheet" href="consulta.css">
+    <title>Inquiry Form</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
     <div class="formulario-container">
-        <h1>Formulario de Consulta</h1>
-        <form action="recibido.html" method="GET">
+        <h1>Inquiry Form</h1>
+        <form action="received.html" method="GET">
             
-            <label for="nombre">Nombre:</label>
-            <input type="text" id="nombre" name="nombre">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name">
 
-            <label for="apellido">Apellido (requerido):</label>
-            <input type="text" id="apellido" name="apellido" required>
+            <label for="Surname"> Surname (required):</label>
+            <input type="text" id="surname" name="surname" required>
 
-            <label for="edad">Edad (mínimo 18):</label>
-            <input type="number" id="edad" name="edad" min="18">
+            <label for="edad">Age (minimum 18):</label>
+            <input type="number" id="age" name="age" min="18">
 
-            <label for="email">Email (requerido):</label>
+            <label for="email">Email (required):</label>
             <input type="email" id="email" name="email" required>
 
-            <label for="asunto">Asunto (requerido):</label>
-            <input type="text" id="asunto" name="asunto" required>
+            <label for="asunto">Issue (required):</label>
+            <input type="text" id="issue" name="issue" required>
 
-            <label for="comentario">Comentario (máx 150 caracteres):</label>
-            <textarea id="comentario" name="comentario" maxlength="150" rows="4"></textarea>
+            <label for="comment">Comment (máx 150 characters):</label>
+            <textarea id="comment" name="comment" maxlength="150" rows="4"></textarea>
 
-            <button type="submit">Enviar Consulta</button>
+            <button type="submit">Send Inquiry</button>
         </form>
     </div>
-
+    
 </body>
 </html>
